# Voicy

./: .gitignore  LICENSE  README.md  build.ps1  index.html  nvcc.bat  package-lock.json  package.json  run-gpu.bat  server.js  setup.bat
docs/: PRD.md
src/: App.tsx  index.css  index.html  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs  scratch.rs  scratch_hf.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/models/: downloader.rs  mod.rs  translate.rs  tts.rs  whisper.rs
src-tauri/src/pipeline/: mod.rs
src/components/: AudioWaveform.tsx
src/hooks/: api.ts  useWebSocket.ts
