[package]
name = "voicy"
version = "0.0.0"
description = "Transcrição, Tradução e Síntese Vocal em Tempo Real — 100% Local"
authors = ["mcnbr"]
edition = "2021"
license = "MIT"

[lib]
name = "voicy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
# Audio
cpal = "0.15"
hound = "3.5"
rayon = "1.10"
parking_lot = "0.12"
once_cell = "1.20"
dirs = "5"

# ML Models - will be integrated after environment setup
# llama-gguf = { version = "0.14", default-features = false, features = ["cpu"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true