[package]
name = "voicy"
version = "0.1.0"
edition = "2021"
authors = ["Voicy Team"]
description = "Transcrição, Tradução e Síntese Vocal em Tempo Real"
license = "MIT"

[lib]
name = "voicy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
cpal = "0.15"

candle-core = "0.10"
candle-transformers = "0.10"
candle-nn = "0.10"
hf-hub = "0.3"
tokenizers = "0.21"
byteorder = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio"] }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.10", features = ["cuda"] }
candle-transformers = { version = "0.10", features = ["cuda"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
